--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v3.4.9
+appVersion: v3.4.10
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.32.2
+version: 0.32.3
 icon: https://argoproj.github.io/argo-workflows/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -16,5 +16,5 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
-    - kind: fixed
-      description: Removed Secrets list and watch from Server RBAC
+    - kind: changed
+      description: Upgrade to Argo Workflows v3.4.10
