--- a/charts/argo-workflows/templates/crds/argoproj.io_workflowtaskresults.yaml
+++ b/charts/argo-workflows/templates/crds/argoproj.io_workflowtaskresults.yaml
@@ -125,7 +125,7 @@ spec:
                         useSDKCreds:
                           type: boolean
                       required:
-                      - blob
+                      - blobNameFormat
                       - container
                       - endpoint
                       type: object
