Use the clusterAdminAccess setting now to enable the cluster role binding of the applicaitonset controller. Signed-off-by: Boris Smidt <boris.smidt@restore.eu>
Signed-off-by: Boris Smidt <boris.smidt@restore.eu>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: fixed
-      description: Add a cluster role to make namespaced application set controller work.  
+      description: clusterAdminAccess now creates a cluster role for thhe applicationset controller to support multiple namespaces 
