--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2177,6 +2177,9 @@ repoServer:
   #  - name: cmp-tmp
   #    emptyDir: {}
 
+  # -- Toggle the usage of a ephemeral Helm working directory
+  useEphemeralHelmWorkingDir: true
+
   # -- Annotations to be added to repo server Deployment
   deploymentAnnotations: {}
 
