fix(argo-cd): Add applicationsets resource to argocd-server cluster role
Signed-off-by: Jorge Turrado Ferrero <Jorge_turrado@hotmail.es>

--- a/charts/argo-cd/templates/argocd-server/clusterrole.yaml
+++ b/charts/argo-cd/templates/argocd-server/clusterrole.yaml
@@ -40,6 +40,9 @@ rules:
       - argoproj.io
     resources:
       - applications
+      {{- if .Values.applicationSet.enabled }}
+      - applicationsets
+      {{- end }}
     verbs:
       - get
       - list
