fix(argo-cd): Align redis-ha's affinity type to upstream due to warnings
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1415,7 +1415,7 @@ redis-ha:
     # -- Additional affinities to add to the haproxy pods.
     additionalAffinities: {}
     # -- Assign custom [affinity] rules to the haproxy pods.
-    affinity: {}
+    affinity: |
     # -- [Tolerations] for use with node taints for haproxy pods.
     tolerations: []
 
@@ -1426,7 +1426,7 @@ redis-ha:
   additionalAffinities: {}
 
   # -- Assign custom [affinity] rules to the Redis pods.
-  affinity: {}
+  affinity: |
 
   # -- [Tolerations] for use with node taints for Redis pods.
   tolerations: []
