chore(argo-cd): add changelog
Signed-off-by: Mats Willemsen <mats.willemsen@ah.nl>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: fixed
-      description: Align redis-ha's affinity type to upstream due to warnings
+      description: fixed issue with argocd-server servicemonitor annotation attribute being added even when no annotations where defined
