feat(argocd): Support new `k8sclient.retry` options
add support for the new following controller/server parameters
introduce in the 2.9.0 version:
- controller.k8sclient.retry.max
- controller.k8sclient.retry.base.backoff
- server.k8sclient.retry.max
- server.k8sclient.retry.base.backoff

Signed-off-by: Laurent Lavaud <llavaud@lvdconsulting.pro>

--- a/charts/argo-cd/templates/argocd-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-server/deployment.yaml
@@ -296,6 +296,18 @@ spec:
                 name: argocd-cmd-params-cm
                 key: server.enable.proxy.extension
                 optional: true
+          - name: ARGOCD_K8SCLIENT_RETRY_MAX
+            valueFrom:
+                configMapKeyRef:
+                  name: argocd-cmd-params-cm
+                  key: server.k8sclient.retry.max
+                  optional: true
+          - name: ARGOCD_K8SCLIENT_RETRY_BASE_BACKOFF
+            valueFrom:
+                configMapKeyRef:
+                  name: argocd-cmd-params-cm
+                  key: server.k8sclient.retry.base.backoff
+                  optional: true
         {{- with .Values.server.envFrom }}
         envFrom:
           {{- toYaml . | nindent 10 }}
