--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -27,7 +27,7 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: added
-      description: Add event reporter as a separate component
+      description: Add event-reporter as a separate component
     - kind: changed
       description: Update ArgoCD version to v2.8.1-cap-CR-21281-new-reporter
     - kind: changed
