--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v2.8.1-cap-CR-21281-new-reporter
+appVersion: v2.8.1-cap-CR-create-apps-with-err
 kubeVersion: ">=1.23.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 5.50.1-1-cap-CR-21429
+version: 5.50.1-2-cap-CR-create-apps-with-err
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -27,8 +27,8 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: added
-      description: Add event-reporter as a separate component
-    - kind: changed
-      description: Update ArgoCD version to v2.8.1-cap-CR-21281-new-reporter
-    - kind: changed
-      description: Add ability to switch between reporters
+      description: Add priority queue to reporter
+    - kind: fixed
+      description: Fix bug with skip-current-step
+    - kind: fixed
+      description: Support creation of apps with empty dir in reporter
