add write permissions
Signed-off-by: Tim Collins <tim@thecollins.team>

--- a/.github/workflows/chart-version-bump.yml
+++ b/.github/workflows/chart-version-bump.yml
@@ -8,6 +8,9 @@ on:
     types:
       - labeled
 
+permissions:
+  contents: write
+
 jobs:
   helm-bumper:
     if: ${{ (contains(github.event.pull_request.labels.*.name, 'renovate')) }}
