feat: add rollout plugin contour rbac
Signed-off-by: xiaowu.zhu <xiaowu.zhu@daocloud.io>

--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -262,6 +262,8 @@ providerRBAC:
     traefik: true
     # -- Adds RBAC rules for the Apisix provider
     apisix: true
+    # -- Adds RBAC rules for the Contour provider, see `https://github.com/argoproj-labs/rollouts-plugin-trafficrouter-contour/blob/main/README.md`
+    contour: true
 
 dashboard:
   # -- Deploy dashboard server
