--- a/charts/argo-rollouts/templates/controller/clusterrole.yaml
+++ b/charts/argo-rollouts/templates/controller/clusterrole.yaml
@@ -255,5 +255,17 @@ rules:
   - get
   - update
 {{- end }}
+{{- if .Values.providerRBAC.providers.contour }}
+  # Access needed when using the Contour provider
+- apiGroups:
+    - projectcontour.io
+  resources:
+    - httpproxies
+  verbs:
+    - get
+    - list
+    - watch
+    - update
+{{- end }}
 {{- end }}
 {{- end }}
