--- a/.github/workflows/chart-version-bump.yml
+++ b/.github/workflows/chart-version-bump.yml
@@ -19,11 +19,13 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           fetch-depth: 0
+
       - name: Get changed files
         id: changed-files
-        uses: tj-actions/changed-files@https://github.com/tj-actions/changed-files/commit/1c938490c880156b746568a518594309cfb3f66b # v40.2.1
+        uses: tj-actions/changed-files@1c938490c880156b746568a518594309cfb3f66b # v40.2.1
         with:
           files: charts/{argo-workflows,argo-cd,argo-events,argo-rollouts,argocd-image-updater}/Chart.yaml
+
       - name: "Bump Version and Changelog"
         run: |
           chartName="$(echo \"${{ steps.changed-files.outputs.all_changed_files }}\" | cut -d '/' -f2)"
@@ -47,6 +49,7 @@ jobs:
           echo "    - kind: changed" >> ${parentDir}/Chart.yaml
           echo "      description: Bump ${chartName} to ${appVersion}" >> ${parentDir}/Chart.yaml
           cat ${parentDir}/Chart.yaml
+
       - name: "Commit and push changes"
         uses: stefanzweifel/git-auto-commit-action@8756aa072ef5b4a080af5dc8fef36c5d586e521d # v5.0.0
         with:
