Corrected lint errors
Signed-off-by: workwithprashant <60788667+workwithprashant@users.noreply.github.com>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -17,4 +17,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: fix(argo-workflows): fix helm lint error when extraObjects is defined and same fix as one done for argo-cd #2116
+      description: "fix(argo-workflows): fix helm lint error when extraObjects is defined and same fix as one done for argo-cd #2116"
