--- a/charts/argo-rollouts/templates/controller/deployment.yaml
+++ b/charts/argo-rollouts/templates/controller/deployment.yaml
@@ -45,10 +45,8 @@ spec:
         args:
         - --healthzPort={{ .Values.controller.containerPorts.healthz }}
         - --metricsport={{ .Values.controller.containerPorts.metrics }}
-        - "--loglevel"
-        - "{{ .Values.controller.logging.level }}"
-        - "--logformat"
-        - "{{ .Values.controller.logging.format }}"
+        - "--loglevel={{ .Values.controller.logging.level }}"
+        - "--logformat={{ .Values.controller.logging.format }}"
         {{- if not .Values.clusterInstall }}
         - --namespaced
         {{- end }}
